--- a/admin/index.html
+++ b/admin/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Content Editor</title>
   <script src="https://identity-js.netlify.com/v1/netlify-identity-widget.js"></script>
+  <style>
+[data-slate-editor] { 
+    -webkit-user-modify: read-write !important; 
+}
+</style>
 </head>
 <body>
   <script src="https://unpkg.com/netlify-cms@^2.0/dist/cms.js"></script>
